# llvm-orb

./: .pwd  flake.nix
clang/include/clang/Basic/: CodeGenOptions.def
clang/include/clang/CIR/: LowerToLLVM.h  LoweringHelpers.h
clang/include/clang/CIR/Dialect/: Passes.h  Passes.td
clang/include/clang/Options/: Options.td
clang/lib/CIR/CodeGen/: CIRGenBuiltin.cpp  CIRGenBuiltinAArch64.cpp  CIRGenCall.cpp
clang/lib/CIR/Dialect/IR/: CIRTypes.cpp
clang/lib/CIR/Dialect/Transforms/: CIRToCF.cpp  CIRToCppAtomic.cpp  CIRToPtr.cpp  CMakeLists.txt
clang/lib/CIR/Dialect/Transforms/TargetLowering/: CIRToCppAtomic.cpp  CMakeLists.txt
clang/lib/CIR/FrontendAction/: CIRGenAction.cpp
clang/lib/CIR/Lowering/: CMakeLists.txt  LoweringHelpers.cpp
clang/lib/CIR/Lowering/DirectToLLVM/: CMakeLists.txt  LowerToLLVM.cpp
clang/lib/CIR/Lowering/ToMLIR/: CIRToCF.cpp  CIRToCppAtomic.cpp  CIRToPtr.cpp  CMakeLists.txt
clang/test/CIR/Lowering/Orb/: CppAtomic_Load_Store_Summary.md  generate_filecheck_tests.py  helloWorld.cpp  helloworld  log.txt  run_filecheck_tests.sh  test_arm_atomic_to_llvm.mlir  test_cir_to_arm_atomic.mlir  test_cir_to_cpp_atomic.mlir  test_cir_to_llvm.mlir  test_cpp_atomic_to_arm_atomic.mlir  test_cpp_atomic_to_llvm.mlir  test_direct_cir_to_llvmir.mlir
clang/test/CIR/Transforms/: cir-to-ptr.cir
clang/tools/cir-opt/: CMakeLists.txt  cir-opt.cpp
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Conversion/ArmAtomicToLLVM/: ArmAtomicToLLVM.h  FenceSynthesis.h
mlir/include/mlir/Conversion/CppAtomicToArmAtomic/: CppAtomicToArmAtomic.h  OrderAnalysis.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/LLVMIR/: LLVMTypes.td
mlir/include/mlir/Dialect/Orb/: ArmAtomic.td  ArmAtomicDialect.h  CMakeLists.txt  CppAtomic.td  CppAtomicDialect.h  OrbAtomicInterface.h
mlir/include/mlir/Dialect/Orb/TransformOps/: CMakeLists.txt  CppAtomicTransformOps.h  CppAtomicTransformOps.td
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/ArmAtomicToLLVM/: ArmAtomicToLLVM.cpp  CMakeLists.txt  FenceSynthesis.cpp
mlir/lib/Conversion/CppAtomicToArmAtomic/: CMakeLists.txt  CppAtomicToArmAtomic.cpp  OrderAnalysis.cpp
mlir/lib/Conversion/PtrToLLVM/: PtrToLLVM.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/IR/: LLVMTypes.cpp
mlir/lib/Dialect/Orb/: CMakeLists.txt
mlir/lib/Dialect/Orb/IR/: ArmAtomicDialect.cpp  CMakeLists.txt  CppAtomicDialect.cpp  OrbAtomicInterface.cpp
mlir/lib/Dialect/Orb/TransformOps/: CMakeLists.txt  CppAtomicTransformOps.cpp
mlir/lib/IR/: AsmPrinter.cpp
mlir/test/Conversion/CppAtomicToArmAtomic/: fence-synthesis-deps.mlir
(+3 files in other folders)
